re #6064 Performances jobs optimization - Rated Transactions Jobs